--- a/project/css/home.css
+++ b/project/css/home.css
@@ -10,19 +10,7 @@ marquee {
   background-color: #3586ff;
 }
 
-.AMUT_vid {
-  width: 1020px;
-  border-radius: 24px;
-  border: solid #333;
-  display: block;
-  margin: 10px auto;
-  transition: 1s;
-}
-.AMUT_vid:hover {
-  border-color: #3586ff;
-  box-shadow: 0 0.1rem 1rem #3586ff;
-}
-
+/* Last news section */
 .lastNews h1 {
   font-size: 30px;
   text-align: center;
@@ -31,6 +19,21 @@ marquee {
 }
 .lastNews h1:hover {
   scale: 1.1;
+}
+
+/* AMUT intro video */
+.AMUT_vid {
+  width: 1020px;
+  border-radius: 24px;
+  border: solid #333;
+  display: block;
+  margin: 10px 20px;
+  transition: 1s;
+}
+
+.AMUT_vid:hover {
+  border-color: #3586ff;
+  box-shadow: 0 0.1rem 1rem #3586ff;
 }
 
 @media screen and (max-width: 1050px) {
