--- a/project/css/navbar.css
+++ b/project/css/navbar.css
@@ -1,3 +1,5 @@
+/** @format */
+
 nav ul {
 	list-style-type: none;
 	text-align: center;
@@ -15,7 +17,7 @@ nav li a {
 	text-align: center;
 	text-decoration: none;
 	font-size: 25px;
-	transition: background-color 0.3s, transform 0.3s;
+	transition: 0.5s;
 }
 nav li a:hover {
 	background-color: #111;
@@ -26,37 +28,46 @@ nav ul li a {
 	display: block;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 14px 50px;
 	text-decoration: none;
+}
+
+nav ul li i {
+	padding-left: 20px;
 }
 
 nav ul li a:hover {
 	background-color: #111;
 }
 
-nav ul li ul.submenu {
+/* Sub nav bar */
+nav ul li ul {
 	display: none;
-	position: absolute;
-	background-color: #333;
-}
-
-nav ul li:hover ul.submenu {
-	z-index: 1;
+  position: absolute;
 	margin-top: 60px;
-	opacity: 0.5;
-	display: grid;
+  left: 0;
+  background-color: #333;
+  width: 100%;
+  z-index: 1;
 }
 
-nav ul li ul.submenu li {
+nav ul li:hover ul {
+	display: grid;
+	z-index: 1;
+	opacity: 0.8;
+}
+
+nav ul li ul li {
 	float: none;
 	display: grid;
 }
 
 nav ul li ul li a {
-	font-size: 15px;
+	font-size: 20px;
+	display: block;
 }
 
-nav ul li ul  li a:hover {
+nav ul li ul li a:hover {
 	background-color: #575757;
 }
 
