--- a/project/css/home.css
+++ b/project/css/home.css
@@ -8,6 +8,7 @@
  ************************************************* */
 marquee {
   background-color: #3586ff;
+  font-size: 30px;
 }
 
 /* Last news section */
