--- a/project/sass/artical.sass
+++ b/project/sass/artical.sass
@@ -8,7 +8,7 @@
  ************************************************* */
 
 // Mixin D&D part
-@mixin theme($color)
+@mixin theme($color0, $color1)
   background-image: url("/project/res/custom/image copy.png")
   margin: 100px
   border-radius: 20px
@@ -16,20 +16,31 @@
   transition: 1s
 
   &:hover
-    border-color: $color
-    box-shadow: 0 0.1rem 1rem $color
+    border-color: $color0
+    box-shadow: 0 0.1rem 1rem $color0
 
   h1
     font-size: 50px
     padding: 10px
     text-align: center
     color: #000000
-    background-color: $color
+    background-color: $color0
     border-radius: 15px
     box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.1)
 
     &:hover
       border: solid 1px
+
+  div
+    margin-right: 20px
+    margin-left: 20px
+    padding-bottom: 10px
+    p
+      background-color: $color1
+      border-radius: 15px
+      padding: 10px
+      margin-right: 20px
+      font-size: 20px
 
 body
   background-image: url("../res/AMUT imgs/logo.png")
@@ -121,18 +132,8 @@ body
 
 /* Article Sass part */
 .sub_article00
-  @include theme(#3586ff)
+  @include theme(#3586ff, #3586ff73)
   div
-    margin-right: 20px
-    margin-left: 20px
-    padding-bottom: 10px
-    p
-      background-color: #3586ff73
-      border-radius: 15px
-      padding: 10px
-      margin-right: 20px
-      font-size: 20px
-
     figure
       display: flex
       object-fit: contain
@@ -150,6 +151,42 @@ body
 .li_prg
   &::before
     content: "--🔹"
+.la_prg
+  &::after
+    content: "--🔹"
 
 .sub_article01
-  @include theme(#ffae00)
+  @include theme(#ffae00, #ffae0059)
+  div
+    display: flex
+    p
+      width: 100%
+      height: 20%
+    figure
+      img
+        border-radius: 15px
+        width: 100%
+        transition: 1s
+        &:hover
+          translate: 110%
+          scale: 2
+          box-shadow: 10px 100px 100px 100px rgba(0, 0, 0, 0.562)
+
+.sub_article02
+  @include theme(#ff0000, #ff00005d)
+  div
+    figure
+      display: flex
+      object-fit: contain
+
+      img
+        display: block
+        margin-left: auto
+        margin-right: auto
+        width: 10%
+        border-radius: 15px
+        transition: 1s
+
+        &:hover
+          width: 50%
+          translate: 0 -40%
