--- a/project/css/navbar.css
+++ b/project/css/navbar.css
@@ -1,79 +1,75 @@
-/** @format */
-
-nav ul {
-	list-style-type: none;
-	text-align: center;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #333;
-}
-nav li {
-	display: inline-flex;
-}
-nav li a {
-	display: block;
-	color: white;
-	text-align: center;
-	text-decoration: none;
-	font-size: 25px;
-	transition: 0.5s;
-}
-nav li a:hover {
-	background-color: #111;
-	transform: scale(1.1);
-}
-
-nav ul li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 50px;
-	text-decoration: none;
-}
-
-nav ul li i {
-	padding-left: 20px;
-}
-
-nav ul li a:hover {
-	background-color: #111;
-}
-
-/* Sub nav bar */
-nav ul li ul {
-	display: none;
-  position: absolute;
-	margin-top: 60px;
-  background-color: #333;
-  z-index: 1;
-}
+/**************************************************
+ * @file navbar.css
+ * @author @ZouariOmar (zouariomar20@gmail.com)
+ * @IDE VSC
+ * @version 0.1
+ * @date 2024-06-06
+ * @copyright Copyright (c) 2024
+ ************************************************* */
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1; }
+  nav ul {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333; }
+    nav ul li {
+      /* Sub nav bar */ }
+      nav ul li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 50px;
+        text-decoration: none; }
+        nav ul li a:hover {
+          background-color: #111; }
+      nav ul li i {
+        padding-left: 20px; }
+      nav ul li ul {
+        display: none;
+        position: absolute;
+        margin-top: 60px;
+        background-color: #333;
+        z-index: 1; }
+  nav li {
+    display: inline-flex; }
+    nav li a {
+      display: block;
+      color: white;
+      text-align: center;
+      text-decoration: none;
+      font-size: 25px;
+      transition: 0.5s; }
+      nav li a:hover {
+        background-color: #111;
+        transform: scale(1.1); }
 
 nav ul li:hover ul {
-	display: grid;
-	z-index: 1;
-	opacity: 1;
-}
+  display: grid;
+  z-index: 1;
+  opacity: 1; }
 
 nav ul li ul li {
-	float: none;
-	display: grid;
-}
+  float: none;
+  display: grid; }
 
 nav ul li ul li a {
-	font-size: 20px;
-	display: block;
-}
+  font-size: 20px;
+  display: block; }
 
 nav ul li ul li a:hover {
-	background-color: #575757;
-}
+  background-color: #575757; }
 
 .active {
-	background-color: #00a9ec57;
-}
+  background-color: #00a9ec57; }
 
 .logo {
-	margin-right: 20px;
-	height: 60px;
-}
+  margin-right: 20px;
+  height: 60px; }
+
+/*# sourceMappingURL=navbar.css.map */
