--- a/project/sass/slider.sass
+++ b/project/sass/slider.sass
@@ -34,7 +34,7 @@ button.prev, button.next
   position: absolute
   top: 50%
   transform: translateY(-50%)
-  background-color: #00a9ec57
+  background-color: #333
   color: white
   border: none
   padding: 10px
@@ -49,4 +49,4 @@ button.next
   right: 5px
 
 button.prev:hover, button.next:hover
-  background-color: rgba(0, 0, 0, 0.7)
+  background-color: #00a9ec57
