--- a/project/css/default.css
+++ b/project/css/default.css
@@ -9,22 +9,20 @@
 html {
   direction: rtl;
   box-sizing: border-box;
-  scroll-behavior: smooth;
-}
+  scroll-behavior: smooth; }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-}
+  margin: 5% 0 0 0;
+  padding: 0; }
 
 hr {
   opacity: 0.1;
-  margin: 20px;
-}
+  margin: 20px; }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
+
+/*# sourceMappingURL=default.css.map */
