--- a/project/css/home.css
+++ b/project/css/home.css
@@ -12,6 +12,7 @@
   100% {
     background-color: red; } }
 marquee {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
   background-color: #3586ff;
   font-size: 20px; }
 
@@ -28,7 +29,8 @@ marquee {
   display: flex;
   justify-content: center;
   gap: 10px;
-  margin: 0 100px; }
+  margin: 0 100px;
+  padding: 20px 0; }
   .lastNews div iframe {
     background-color: #333;
     border: solid 2px #333;
@@ -45,6 +47,8 @@ marquee {
 /* AMUT intro video */
 .h__sec {
   display: flex;
+  justify-content: center;
+  gap: 100px;
   background: linear-gradient(0deg, #0059ff00 0%, #3586ff 80%); }
   .h__sec video {
     width: 1020px;
@@ -52,11 +56,17 @@ marquee {
     border: solid #333;
     box-shadow: 0 0.1rem 1rem #333;
     display: flexbox;
-    margin: 20px auto;
+    margin: 20px 0;
     transition: 1s; }
     .h__sec video:hover {
       border-color: #3586ff;
       box-shadow: 0 0.1rem 1rem #3586ff; }
+  .h__sec a {
+    height: 100%;
+    margin-top: 50px; }
+    .h__sec a img {
+      border-radius: 10px;
+      box-shadow: 0 0.1rem 1rem #333; }
 
 @media screen and (max-width: 1050px) {
   .column {
