--- a/project/css/slider.css
+++ b/project/css/slider.css
@@ -31,7 +31,7 @@ button.prev, button.next {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: #00a9ec57;
+  background-color: #333;
   color: white;
   border: none;
   padding: 10px;
@@ -46,6 +46,6 @@ button.next {
   right: 5px; }
 
 button.prev:hover, button.next:hover {
-  background-color: rgba(0, 0, 0, 0.7); }
+  background-color: #00a9ec57; }
 
 /*# sourceMappingURL=slider.css.map */
