--- a/project/sass/artical.sass
+++ b/project/sass/artical.sass
@@ -105,6 +105,82 @@
           scale: 2
           box-shadow: 10px 100px 100px 100px rgba(0, 0, 0, 0.562)
 
+@mixin article-tempate-03()
+  background-image: url("/project/res/custom/image copy.png")
+  margin: 100px
+  border: solid 2px
+  border-radius: 20px
+  box-shadow: 0 0.5rem 1rem #333
+  transition: 1s
+
+  &:hover
+    box-shadow: 0 0.1rem 1rem #0066ff
+    border-color: #0066ff
+    h1
+      color: #0066ff
+    header
+      p
+        border: solid 3px
+        border-color: #0066ff
+
+  h1
+    font-family: serif
+    font-size: 50px
+    color: #333
+    padding-bottom: 50px
+    text-align: center
+    border-block-end: solid 3px
+    border-radius: 20px
+  section
+    header
+      display: flex
+      gap: 20px
+      margin: 0 20px
+      padding-bottom: 10px
+      justify-content: center
+      align-items: center
+      p
+        display: flexbox
+        border: solid 3px
+        border-radius: 20px
+        padding: 50px
+        font-size: 20px
+        height: 20%
+        width: 50%
+      img
+        width: 50%
+        height: auto
+        border-radius: 20px
+        transition: 1s
+        &:hover
+          translate: 50%
+          scale: 1.2
+          box-shadow: 10px 100px 100px 100px rgba(0, 0, 0, 0.562)
+    figure
+      display: grid
+      grid-template-columns: 50% 50%
+      gap: 20px 10px
+      margin: 0 100px
+      &:hover
+        img
+          filter: blur(5px)
+      img
+        width: 100%
+        border-radius: 20px
+        transition: 1s ease
+        &:hover
+          filter: none
+          box-shadow: 10px 100px 100px 100px rgba(0, 0, 0, 0.562)
+  footer
+    i
+      font-size: 30px
+      color: black
+      margin-right: 97%
+      transition: 1s
+      &:hover
+        translate: 0 -10px
+        color: blue
+
 body
   background-image: url("../res/AMUT imgs/logo.png")
   background-repeat: no-repeat
@@ -178,7 +254,7 @@ body
   padding-bottom: 10px
 
   p
-    border-radius: 12px
+    border-radius: 20px
     padding: 20px
     margin: 10px
     line-height: 1.5
@@ -218,3 +294,6 @@ body
 
 .sub_article08
   @include article-template-01(30%, 40%)
+
+.sub_article09
+  @include article-tempate-03()
