--- a/project/sass/default.sass
+++ b/project/sass/default.sass
@@ -10,10 +10,11 @@
 html
   direction: rtl
   box-sizing: border-box
+  scroll-behavior: smooth
 
 body
   font-family: Arial, Helvetica, sans-serif
-  margin: 0
+  margin: 5% 0 0 0
   padding: 0
 
 hr
