--- a/project/css/about.css
+++ b/project/css/about.css
@@ -13,7 +13,10 @@
     font-family: serif;
     font-size: 50px;
     color: #333;
-    margin-bottom: 100px; }
+    margin-bottom: 100px;
+    transition: 1s; }
+    .prim_law h1:hover {
+      scale: 1.1; }
   .prim_law i {
     font-size: 70px;
     transition: 1s;
@@ -136,5 +139,28 @@
     height: 562.5px; }
   .btn-posnawr:active {
     background-color: #00c4ad; }
+
+.about_us {
+  display: grid;
+  justify-content: center; }
+  .about_us h1 {
+    margin: auto;
+    font-family: serif;
+    font-size: 50px;
+    color: #333;
+    margin-bottom: 100px;
+    transition: 1s; }
+    .about_us h1:hover {
+      scale: 1.1; }
+  .about_us img {
+    border: solid 2px #333;
+    border-radius: 20px;
+    box-shadow: 0 0.1rem 1rem #333;
+    overflow: hidden;
+    transition: 1s; }
+    .about_us img:hover {
+      scale: 1.1;
+      border-color: #3586ff;
+      box-shadow: 0 0.1rem 1rem #3586ff; }
 
 /*# sourceMappingURL=about.css.map */
