--- a/project/css/home.css
+++ b/project/css/home.css
@@ -14,7 +14,7 @@
 marquee {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", serif;
   background-color: #3586ff;
-  font-size: 20px; }
+  font-size: 25px; }
 
 /* Last news section */
 .lastNews h1 {
@@ -48,25 +48,16 @@ marquee {
 .h__sec {
   display: flex;
   justify-content: center;
-  gap: 100px;
   background: linear-gradient(0deg, #0059ff00 0%, #3586ff 80%); }
-  .h__sec video {
-    width: 1020px;
-    border-radius: 20px;
-    border: solid #333;
-    box-shadow: 0 0.1rem 1rem #333;
-    display: flexbox;
-    margin: 20px 0;
-    transition: 1s; }
-    .h__sec video:hover {
-      border-color: #3586ff;
-      box-shadow: 0 0.1rem 1rem #3586ff; }
   .h__sec a {
-    height: 100%;
-    margin-top: 50px; }
+    height: 100%; }
     .h__sec a img {
       border-radius: 10px;
       box-shadow: 0 0.1rem 1rem #333; }
+
+.ADs {
+  display: grid;
+  margin: 50px 100px; }
 
 @media screen and (max-width: 1050px) {
   .column {
