--- a/project/sass/about.sass
+++ b/project/sass/about.sass
@@ -16,12 +16,15 @@
     font-size: 50px
     color: #333
     margin-bottom: 100px
+    transition: 1s
+    &:hover
+      scale: 1.1
   i
     font-size: 70px
     transition: 1s
     color: #333
     &:hover
-      color:  #f40f02
+      color: #f40f02
       scale: 1.1
 
 .header_02
@@ -148,3 +151,26 @@
 
   &:active
     background-color: #00c4ad
+
+.about_us
+  display: grid
+  justify-content: center
+  h1
+    margin: auto
+    font-family: serif
+    font-size: 50px
+    color: #333
+    margin-bottom: 100px
+    transition: 1s
+    &:hover
+      scale: 1.1
+  img
+    border: solid 2px #333
+    border-radius: 20px
+    box-shadow: 0 0.1rem 1rem #333
+    overflow: hidden
+    transition: 1s
+    &:hover
+      scale: 1.1
+      border-color: #3586ff
+      box-shadow: 0 0.1rem 1rem #3586ff
