--- a/project/sass/artical.sass
+++ b/project/sass/artical.sass
@@ -165,9 +165,11 @@
         img
           filter: blur(5px)
       img
+        object-fit: cover
         width: 100%
         border-radius: 20px
         transition: 1s ease
+        max-height: 600px
         &:hover
           filter: none
           box-shadow: 10px 100px 100px 100px rgba(0, 0, 0, 0.562)
