--- a/project/sass/home.sass
+++ b/project/sass/home.sass
@@ -21,7 +21,7 @@ $AMUT_COLOR1: #3586ff
 marquee
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', serif
     background-color: $AMUT_COLOR1
-    font-size: 20px
+    font-size: 25px
 
 /* Last news section */
 .lastNews
@@ -56,25 +56,16 @@ marquee
 .h__sec
   display: flex
   justify-content: center
-  gap: 100px
   background: linear-gradient(0deg, #0059ff00 0%, $AMUT_COLOR1 80%)
-  video
-    width: 1020px
-    border-radius: 20px
-    border: solid #333
-    box-shadow: 0 0.1rem 1rem #333
-    display: flexbox
-    margin: 20px 0
-    transition: 1s
-    &:hover
-      border-color: $AMUT_COLOR1
-      box-shadow: 0 0.1rem 1rem $AMUT_COLOR1
   a
     height: 100%
-    margin-top: 50px
     img
       border-radius: 10px
       box-shadow: 0 0.1rem 1rem #333
+
+.ADs
+  display: grid
+  margin: 50px 100px
 
 @media screen and (max-width: 1050px)
   .column
